--- a/login/templates/login/forgot_password.html
+++ b/login/templates/login/forgot_password.html
@@ -10,21 +10,31 @@
 		<div class="col-xs-12 col-sm-6 col-sm-offset-3">
 			<form action="{% url 'login:forgot_password' %}" method="post" class="form-signin" role="form">{% csrf_token %}
 				<h3>Forgot Password</h3>
-				{% if page_error %}
-					<div class="alert alert-danger page_error" style="margin-top: 10px;">
-						{{ page_error }}
+				{% if reset_email_sent_message %}
+					<div class="alert alert-warning page_warning" style="margin-top: 10px;">
+						{{ reset_email_sent_message }}
 					</div>
+					<div>
+						<a href="{% url 'login:index' %}">Return</a> to the login screen.
+					</div>
+				{% else %}
+					{% if page_error %}
+						<div class="alert alert-danger page_error" style="margin-top: 10px;">
+							{{ page_error }}
+						</div>
+					{% endif %}
+					<div>
+				    {% for field in form %}
+				    	<div class="form-group {% if field.errors %}has-error{% endif %}">
+				       		{{ field }}
+							{% for error in field.errors %}
+								<ul class="text-danger" style="padding-left:0px">{{ error }}</ul>
+							{% endfor %}
+				       	</div>
+				    {% endfor %}
+				    <button class="btn btn-lg btn-default pull-left" type="button" onclick="javascript:window.location='../'">Cancel</button>
+					<button class="btn btn-lg btn-primary pull-right" type="submit">Submit</button>
 				{% endif %}
-				<div>{{ forgot_password_link }}
-			    {% for field in form %}
-			    	<div class="form-group {% if field.errors %}has-error{% endif %}">
-			       		{{ field }}
-						{% for error in field.errors %}
-							<ul class="text-danger" style="padding-left:0px">{{ error }}</ul>
-						{% endfor %}
-			       	</div>
-			    {% endfor %}
-				<button class="btn btn-lg btn-primary btn-block" type="submit">Submit</button>
 			</form>
 		</div>
 	</div>
