--- a/pigpicks/templates/pigpicks/base.html
+++ b/pigpicks/templates/pigpicks/base.html
@@ -11,7 +11,7 @@
     </title>
 
     <!-- Bootstrap -->
-    <link href="{% static 'pigpicks/css/bootstrap-3.1.1/dist/css/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'pigpicks/css/bootstrap.min.css' %}" rel="stylesheet">
     <!-- Pig Picks CSS -->
 	<link href="{% static 'pigpicks/css/pigpicks.css' %}" rel="stylesheet">
 
