--- a/pigpicks/templates/pigpicks/base_site.html
+++ b/pigpicks/templates/pigpicks/base_site.html
@@ -37,7 +37,7 @@
 							<b class="caret"></b>
 						</a>
 						<ul class="dropdown-menu">
-							<li><a href="#">Change Password</a></li>
+							<li><a href="{% url 'login:reset_password' %}">Change Password</a></li>
 							<li><a href="{% url 'login:logout' %}">Logout</a></li>
 						</ul>
 					</li>
