--- a/pigpicks/templates/404.html
+++ b/pigpicks/templates/404.html
@@ -3,6 +3,6 @@
 {% block base_content %}
 	<div class="jumbotron">
 		<h1>This is not a page, silly!</h1>
-		<p>Head on <a href="{% url 'home:index' %}">back to pig picks five</a>.  Go on now!</p>
+		<p>Head on <a href="{% url 'home:index' %}">back to Pig Picks Five</a>.  Go on now!</p>
 	</div>
 {% endblock %}
