--- a/pigpicks/templates/pigpicks/base.html
+++ b/pigpicks/templates/pigpicks/base.html
@@ -31,7 +31,7 @@
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
     <script src="{% static 'pigpicks/js/jquery-1.11.0.min.js' %}"></script>
     <!-- bootstrap plugins -->
-    <script src="{% static 'pigpicks/js/bootstrap.min.js' %}"></script>
+    <script src="{% static 'pigpicks/css/bootstrap-3.1.1/dist/js/bootstrap.min.js' %}"></script>
     <!-- datatables jquery plugin -->
     <script src="{% static 'pigpicks/js/jquery.dataTables.min.js' %}"></script>
     <!-- custom js -->
