--- a/login/templates/login/forgot_password_email.html
+++ b/login/templates/login/forgot_password_email.html
@@ -3,9 +3,11 @@
 
 {% block logincss %}<link href="{% static 'pigpicks/css/login.css' %}" rel="stylesheet">{% endblock %}
 
+{% block content %}
 <div id="forgot_password_email_body">
 	<div>Your email: {{ user_email }}</div>
 	<div>Your temporary password: {{ user_temp_password }}</div>
 	<div>Click the link below to log into Pig Picks Five using the above login information and you will be prompted to reset your password.</div>
 	<div><a href="http://www.pigpicksfive.com/login/">http://www.pigpicksfive.com/login/</a></div>
 </div>
+{% endblock %}
