--- a/picks/templates/picks/index.html
+++ b/picks/templates/picks/index.html
@@ -99,7 +99,7 @@
 				{% endfor %}
 				{% if lock_picks == False %}
 					<div style="margin:10px 0 10px 0">
-						<button class="btn btn-lg btn-primary btn-block" type="submit">Submit Picks</button>
+						<button class="btn btn-lg btn-primary btn-block" type="submit">Continue</button>
 					</div>
 				{% endif %}
 			</form>
