--- a/league/templates/league/standings.html
+++ b/league/templates/league/standings.html
@@ -8,7 +8,7 @@
 			<tr>
 				<th class="col-xs-1"></th>
 				<th class="col-xs-6 col-lg-3 cell_border_right">Team</th>
-				<th class="col-xs-5 col-lg-1 cell_border_right text-center">Wins</th>
+				<th class="col-xs-5 col-lg-1 cell_border_right text-center">Points</th>
 				<!-- weeks only visible on large devices -->
 				<th class="visible-lg col-lg-7">
 					{% for week in weeks %}
