--- a/picks/templates/picks/index.html
+++ b/picks/templates/picks/index.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 	<div class="container">
-		<ul class="pagination">
+		<ul class="pagination" style="margin:20px 0 0 0;">
 			{% if week.week_number|add:"0" > 1 %}
 				<li>
 					<a href="/picks/{{ week.week_number|add:"-1" }}/">&laquo;</a>
