--- a/picks/templates/picks/bestbet.html
+++ b/picks/templates/picks/bestbet.html
@@ -51,12 +51,8 @@
 						{% endif %}
 					{% endfor %}
 				</div>
-				<div style="margin:10px 0 10px 0; width:280px;">
-				    <button class="btn btn-lg btn-default pull-left" type="button" onclick="javascript:window.history.back()">
-				    	<span class="glyphicon glyphicon-chevron-left"></span>
-				    	Back
-				    </button>
-					<button class="btn btn-lg btn-primary pull-right" type="submit">Save Picks</button>
+				<div style="margin:10px 0 10px 0">
+					<button class="btn btn-lg btn-primary" style="width:280px;" type="submit">Save Picks</button>
 				</div>
 			</form>
 		{% endif %}
