--- a/pigpicks/templates/pigpicks/base_site.html
+++ b/pigpicks/templates/pigpicks/base_site.html
@@ -10,7 +10,7 @@
 					<span class="icon-bar"></span>
 					<span class="icon-bar"></span>
 				</button>
-				<a class="navbar-brand" href="{% url 'home:index' %}">Home</a>
+				<a class="navbar-brand" id="pigpicks_brand" href="{% url 'home:index' %}"></a>
 			</div>
 
 			<div class="collapse navbar-collapse" id="pigpicks-navbar">
