--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -9,7 +9,9 @@
 	<div class="row">
 		<div class="col-xs-12 col-sm-6 col-sm-offset-3">
 			<form action="{% url 'login:index' %}" method="post" class="form-signin" role="form">{% csrf_token %}
-				<h3>Pig Picks Five - Sign In</h3>
+				<div class="pigpicks_logo_small">
+					<h4 class="header_no_margin">Pig Picks Five - Sign In</h4>
+				</div>
 				{% if page_warning %}
 					<div class="alert alert-warning page_warning" style="margin-top: 10px;">
 						{{ page_warning }}
