--- a/league/templates/league/standings.html
+++ b/league/templates/league/standings.html
@@ -21,11 +21,11 @@
 			{% regroup standings by user_team_name as standings_list %}
 			{% for user_team_name in standings_list %}
 				<tr>
-					<td>{{ user_team_name.list.0.position }}</td>
-					<td>{{ user_team_name.grouper }}</td>
-					<td class="text-center">{{ user_team_name.list.0.total_wins }}</td>
+					<td {% if user_team_name.list.0.user_id == session_user_id %}class="highlight_row"{% endif %}>{{ user_team_name.list.0.position }}</td>
+					<td {% if user_team_name.list.0.user_id == session_user_id %}class="highlight_row"{% endif %}>{{ user_team_name.grouper }}</td>
+					<td class="text-center {% if user_team_name.list.0.user_id == session_user_id %}highlight_row{% endif %}">{{ user_team_name.list.0.total_wins }}</td>
 					<!-- weeks only visible on large devices -->
-					<td class="visible-lg">
+					<td class="visible-lg {% if user_team_name.list.0.user_id == session_user_id %}highlight_row{% endif %}">
 						{% for user_week_result in user_team_name.list %}
 							<div class="standings_user_week_result">{{ user_week_result.week_wins }}</div>
 						{% endfor %}
