--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -23,7 +23,7 @@
 					{{ page_warning }}
 				</div>
 			{% else %}
-				<div class="col-xs-12 panel panel-default" style="padding: 0; margin: 20px 0 0 0;">
+				<div class="col-xs-12 panel panel-default" style="padding: 0; margin: 0;">
 					<div class="panel-heading">
 						<h4 class="panel-title">Your week {{ week.week_number }} picks</h4>
 					</div>
@@ -61,6 +61,20 @@
 									<div class="col-xs-2 col-sm-1 home_pick_text">{{ pick.home_team_location_short|upper }}</div>
 								{% endif %}
 							</div>
+
+								<div class="row {% cycle 'row_odd' 'row_even' %}">
+									{% if pick.matchup_completed %}
+										<div class="col-xs-3 col-sm-1"></div>
+										<div class="col-xs-2 col-sm-1 game_score">
+											{% if pick.nfl_team_id == pick.home_team_id %}
+												{{ pick.home_team_score }}-{{ pick.away_team_score }}
+											{% else %}
+												{{ pick.away_team_score }}-{{ pick.home_team_score }}
+											{% endif %}
+										</div>
+									{% endif %}
+								</div>
+
 						{% endfor %}
 					</div>
 					<div class="GNF_help">GNF - Game Not Finished</div>
