--- a/pigpicks/static/pigpicks/css/pigpicks.css
+++ b/pigpicks/static/pigpicks/css/pigpicks.css
@@ -76,6 +76,12 @@ body{
 	font-size: 11px;
 	margin-top: 5px;
 }
+.game_score{
+	text-align: center;
+	padding: 0;
+	margin: 0;
+	border: 1px solid #B2B2B2;
+}
 
 /* Picks Styles */
 .matchup .btn{
