--- a/picks/templates/picks/index.html
+++ b/picks/templates/picks/index.html
@@ -63,6 +63,17 @@
 										<div class="col-xs-2 text-center spread">
 											<h5 class="visible-xs">{{ matchup.spread_abs }}</h5>
 											<h4 class="hidden-xs">{{ matchup.spread_abs }}</h4>
+											{% if matchup.matchup_completed %}
+												<div class="game_score" style="max-width:55px; margin:auto;">
+													<span {% if matchup.home_team_id == matchup.winning_nfl_team_id %}class="winning_score"{% endif %}>
+														{{ matchup.home_team_score }}
+													</span>
+													-
+													<span {% if matchup.away_team_id == matchup.winning_nfl_team_id %}class="winning_score"{% endif %}>
+														{{ matchup.away_team_score }}
+													</span>
+												</div>
+											{% endif %}
 										</div>
 										<!-- away underdog -->
 										<div class="col-xs-5">
@@ -82,6 +93,17 @@
 										<div class="col-xs-2 text-center spread">
 											<h5 class="visible-xs">{{ matchup.spread_abs }}</h5>
 											<h4 class="hidden-xs">{{ matchup.spread_abs }}</h4>
+											{% if matchup.matchup_completed %}
+												<div class="game_score" style="max-width:55px; margin:auto;">
+													<span {% if matchup.away_team_id == matchup.winning_nfl_team_id %}class="winning_score"{% endif %}>
+														{{ matchup.away_team_score }}
+													</span>
+													-
+													<span {% if matchup.home_team_id == matchup.winning_nfl_team_id %}class="winning_score"{% endif %}>
+														{{ matchup.home_team_score }}
+													</span>
+												</div>
+											{% endif %}
 										</div>
 										<!-- home underdog -->
 										<div class="col-xs-5">
