--- a/league/templates/league/breakdown.html
+++ b/league/templates/league/breakdown.html
@@ -19,7 +19,7 @@
 		</ul>
 		{% if page_warning != '' %}
 			<div class="alert alert-warning page_warning" style="margin-top: 10px;">
-				{% if week_locked %}
+				{% if breakdown_locked %}
 					The breakdown will show on {{ week.picks_lock|date:"l, F j, h:i A" }}
 				{% else %}
 					{{ page_warning }}
