--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -22,11 +22,11 @@
 				</ul>
 			</div>
 			<div class="col-xs-5" style="text-align:right; margin:20px 0 0 0;">
-				<span style="font-size:11px;">League dues:</span>
+				<div style="font-size:11px;">League dues:</div>
 				{% if user.user_paid %}
-					<span style="color:#338533; font-weight:bold;">Paid</span>
+					<div style="color:#338533; font-weight:bold;">Paid</div>
 				{% else %}
-					<span style="color:#cc3300; font-weight:bold;">Not Paid</span>
+					<div style="color:#cc3300; font-weight:bold;">Not Paid</div>
 				{% endif %}
 			</div>
 		</div>
